--- a/src/scss/s6_footer.scss
+++ b/src/scss/s6_footer.scss
@@ -1,8 +1,30 @@
 #footer{
     background-color: #fafafa;
-    height: 150px;
-}
-.footer-icon {
-    width: 60px;
-    fill: red;
-}
+}  
+.footer-icon-instagram { 
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    /* Background Option 1: Use a background-color as the fill */
+    background-color: #805d91;
+    /* Syntax Option 1: mask shorthand */
+    mask: url(/src/images/instagram.svg) no-repeat 50% 50%;
+    -webkit-mask: url(/src/images/instagram.svg) no-repeat 50% 50%;
+    /* Syntax Option 2: mask-image only */
+    mask-image: url(/src/images/instagram.svg);
+    -webkit-mask-image: url(/src/images/instagram.svg);
+  }
+  .footer-icon-facebook { 
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    /* Background Option 1: Use a background-color as the fill */
+    background-color: #805d91;
+    /* Syntax Option 1: mask shorthand */
+    mask: url(/src/images/facebook.svg) no-repeat 50% 50%;
+    -webkit-mask: url(/src/images/facebook.svg) no-repeat 50% 50%;
+    /* Syntax Option 2: mask-image only */
+    mask-image: url(/src/images/facebook.svg);
+    -webkit-mask-image: url(/src/images/facebook.svg);
+  }
+
