--- a/src/scss/s3_icons.scss
+++ b/src/scss/s3_icons.scss
@@ -2,10 +2,10 @@
     background-color: #fafafa;
 }
 .icons_circles {
-    width: 70px;
+    width: 90px;
     margin: 80px;
     border-radius: 50%;
     border: 1px solid #ab5fd1;
-
-    
+    padding: 15px;
+    display: inline-block;
 }
